OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Evaluation_Rule__mdt/Onboarding_Status_Evaluation_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Ordered rules for onboarding status: Predicate_Config__c JSON plus target fields. Evaluated by OnboardingStatusCmdtRuleEngine / OnboardingStatusPredicateInterpreter; invoked via OnboardingStatusEvaluatorInvocable.</description>
    <label>Onboarding Status Evaluation Rule</label>
    <pluralLabel>Onboarding Status Evaluation Rules</pluralLabel>
</CustomObject>