OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Evaluation_Rule__mdt/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <description>Optional label or stable key for documentation and future admin UI. Evaluation uses Predicate_Config__c only; see docs/onboarding-status-predicate-config.md.</description>
    <label>Condition Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>