OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Evaluation_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this rule is skipped during evaluation.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>