OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Evaluation_Rule__mdt/fields/Predicate_Config__c.field-meta.xml
<CustomField>
    <fullName>Predicate_Config__c</fullName>
    <description>Required JSON predicate for this rule (blank rules never match). Schema: docs/onboarding-status-predicate-config.md</description>
    <label>Predicate Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>