OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Evaluation_Rule__mdt/fields/Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Rule_Order__c</fullName>
    <description>Evaluation order; lower numbers are evaluated first. First matching rule wins.</description>
    <label>Rule Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>