OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Evaluation_Rule__mdt/fields/Target_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Onboarding_Status__c</fullName>
    <description>Onboarding Status to set when this rule matches.</description>
    <label>Target Onboarding Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>