OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Evaluation_Rule__mdt/fields/Target_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Target_Opportunity_Stage__c</fullName>
    <description>Optional. Opportunity StageName to set when this rule matches (e.g., Denied).</description>
    <label>Target Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>